<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingStart="@dimen/activity_horizontal_margin"
              android:paddingEnd="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="com.dankira.achat.views.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="@dimen/form_padding_principal_padding">

        <EditText
            android:id="@+id/edit_register_user_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_hint_user_firstName"
            android:maxLines="1"
            android:padding="@dimen/txt_field_defaultPadding"
            android:singleLine="true"
            android:background="@drawable/textview_border_black"
            android:layout_margin="2dp"/>

        <EditText
            android:id="@+id/edit_register_user_lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_hint_user_lastName"
            android:maxLines="1"
            android:padding="@dimen/txt_field_defaultPadding"
            android:singleLine="true"
            android:background="@drawable/textview_border_black"
            android:layout_margin="2dp"/>

        <EditText
            android:id="@+id/edit_register_user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_hint_user_email"
            android:maxLines="1"
            android:padding="@dimen/txt_field_defaultPadding"
            android:singleLine="true"
            android:background="@drawable/textview_border_black"
            android:inputType="textWebEmailAddress"
            android:layout_margin="2dp"/>

        <EditText
            android:id="@+id/edit_register_user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_hint_user_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="@dimen/txt_field_defaultPadding"
            android:singleLine="true"
            android:background="@drawable/textview_border_black"
            android:layout_margin="2dp"/>

        <EditText
            android:id="@+id/edit_register_user_repeatPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_hint_repeatPassword"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="@dimen/txt_field_defaultPadding"
            android:singleLine="true"
            android:background="@drawable/textview_border_black"
            android:layout_margin="2dp"/>

        <Button
            android:id="@+id/btn_register"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_login_margin"
            android:layout_marginBottom="@dimen/btn_login_margin"
            android:maxLines="1"
            android:padding="@dimen/form_button_padding"
            android:singleLine="true"
            android:text="@string/register_button_label"/>

        <Button
            android:id="@+id/btn_already_member"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/register_already_registered"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/primary_text"/>
    </LinearLayout>

</LinearLayout>
