<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"

              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtUserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/txt_field_defaultPadding"

            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="@dimen/txt_field_defaultPadding"
            android:singleLine="true"
            />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/txt_field_defaultPadding"

            android:hint="@string/prompt_password"
            android:imeActionId="@+id/btnLogin"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionGo"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="@dimen/txt_field_defaultPadding"
            android:singleLine="true"
            />
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_login_margin"
            android:text="@string/action_sign_in_short"
            style="@style/Widget.AppCompat.Button.Colored"/>

        <Button
            android:id="@+id/btn_linktoReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_link_to_reg_margin"
            android:background="@null"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textColor="@color/txt_white"
            android:textSize="@dimen/txt_link_to_login_size"/>

    </LinearLayout>
</LinearLayout>
